--- a/claim.html
+++ b/claim.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-    <link href="time.css?b=c" rel="stylesheet">
+    <link href="time.css" rel="stylesheet">
     <script src="time.js"></script>
   </head>
   <body>
